# object_detector_msgs

./: CMakeLists.txt  README.md  package.xml
action/: CheckForDetections.action  GenericImgProcAnnotator.action
msg/: BoundingBox.msg  Detection.msg  Detections.msg  Plane.msg  PoseStWithConfidence.msg
srv/: PoseEstimation.srv  VisualizePoseEstimation.srv  addBoxes.srv  detectron2_service_server.srv  estimate_poses_st.srv  get_poses_st.srv  refine_poses.srv  refine_poses_st.srv
