<package format="2">
  <name>object_detector_msgs</name>    
  <version>0.1.0</version>
  <description>
     ros wrapper messages for object detectors
  </description>
  <maintainer email="suchi@acin.tuwien.ac.at">Markus Suchi</maintainer>
  <author>Markus Suchi</author>
  <license>BSD</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>



